--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     </div>
                 </a>
 
-                <a href="https://photos.app.goo.gl/WdF7BfYutPqg3BMB6" tabindex="_blank" rel="noopener noreferrer">
+                <a href="https://photos.app.goo.gl/WdF7BfYutPqg3BMB6" target="_blank" rel="noopener noreferrer">
                     <div class="works-card">
                         <img src="img/webbanner.png" alt="WEBバナー" />
                         <h3>WEBバナー</h3>
@@ -171,13 +171,13 @@
                 </li>
                 <li class="news-list__item">
                     <a href="https://www.youtube.com/@%E3%82%88%E3%81%86%E3%81%A1%E3%82%85%E3%81%86%E3%81%A1%E3%82%83%E3%82%93"
-                        tabindex="_blank" rel="noopener noreferrer" class="news-list__link">
+                       target="_blank" rel="noopener noreferrer" class="news-list__link">
                         <span class="news-list__date">2025.07.04</span>
                         甥っ子のあーちゃんがYouTubeデビューしました。
                     </a>
                 </li>
                 <li class="news-list__item">
-                    <a href="https://x.com/yasumasa_ono_hp/status/1907334957045002395" tabindex="_blank"
+                    <a href="https://x.com/yasumasa_ono_hp/status/1907334957045002395" target="_blank"
                         rel="noopener noreferrer" class="news-list__link">
                         <span class="news-list__date">2025.04.02</span>
                         SUNABACOの小野先生よりGlideの記事が紹介されました
