--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         </div>
         <div class="section-inner">
             <h2>お問い合わせはこちらまで</h2>
-            <div class="innner-container">
+            <div class="inner-container">
 
                 <a href="https://docs.google.com/forms/d/1pMTeKe1_quy7y7fuAtHwSvu64vT-IZSQ3isEBFQ3WC4/edit?hl=ja"
                     target="_blank" rel="noopener noreferrer">
@@ -235,6 +235,15 @@
         <img src="img/headerlogo.gif" alt="トップへ戻る" />
     </a>
 
+  
+  <!-- GSAP 本体 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <!-- ScrollTrigger プラグイン -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <!-- 自分のスクリプト -->
+  <script src="JS/main.js"></script>
+</body>
+</html>
 
 
 
