--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
     <script src="JS/modal.js"></script>
 
     <meta name="google-site-verification" content="V1vV5LrnQQDru9JRb-OZtvSFES2gk9ZWfBSOg5gHiuY" />
+
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "s9i3gl1ymm");
+</script>
 </head>
 
 <body>
