--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY PORTFOLIO | Hiromichi Takeuchi</title>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L5YX8FHRLY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-L5YX8FHRLY');
+    </script>
+
     <!-- 基本のSEOメタ -->
     <meta name="description" content="WEBに関するお困りごとを解決します。コーディング・相談・デザインのご依頼はこちらから。">
     <meta name="keywords" content="ポートフォリオ, Web制作, HTML, CSS, JavaScript, デザイン, フロントエンド">
@@ -86,12 +96,12 @@
     <meta name="google-site-verification" content="V1vV5LrnQQDru9JRb-OZtvSFES2gk9ZWfBSOg5gHiuY" />
 
     <script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "s9i3gl1ymm");
-</script>
+        (function (c, l, a, r, i, t, y) {
+            c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+            t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+            y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+        })(window, document, "clarity", "script", "s9i3gl1ymm");
+    </script>
 </head>
 
 <body>
@@ -303,7 +313,7 @@
     <script src="JS/main.js"></script>
 
 
-    
+
 </body>
 
 </html>
